# clientes-cuentas-microservicio-domain/src/main/java/org/javierGomez18/clientes/cuentas/microservicio/domain/model/Movimiento.java
@@ -1,15 +1,32 @@
 package org.javierGomez18.clientes.cuentas.microservicio.domain.model;
 
-import lombok.NonNull;
+import lombok.*;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 
-public record Movimiento(Long id,
-                         @NonNull LocalDate fechaOperacion,
-                         @NonNull TipoMovimiento tipo,
-                         @NonNull BigDecimal importe,
-                         BigDecimal saldoResultante,
-                         @NonNull Long cuentaId,
-                         String descripcion) {
+@Setter
+@Getter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class Movimiento {
+
+    private Long id;
+
+    @NonNull
+    private LocalDate fechaOperacion;
+
+    @NonNull
+    private TipoMovimiento tipo;
+
+    @NonNull
+    private BigDecimal importe;
+
+    private BigDecimal saldoResultante;
+
+    @NonNull
+    private Long cuentaId;
+
+    private String descripcion;
 }
