# clientes-cuentas-microservicio-domain/src/main/java/org/javierGomez18/clientes/cuentas/microservicio/domain/model/TipoMovimiento.java
@@ -3,5 +3,17 @@ package org.javierGomez18.clientes.cuentas.microservicio.domain.model;
 public enum TipoMovimiento {
     INGRESO,
     RETIRADA,
-    TRANSFERENCIA
+    TRANSFERENCIA;
+
+    public static TipoMovimiento fromString(String value) {
+        if (value == null) {
+            throw new IllegalArgumentException("El tipo de movimiento no puede ser null");
+        }
+
+        try {
+            return TipoMovimiento.valueOf(value.trim().toUpperCase());
+        } catch (IllegalArgumentException ex) {
+            throw new IllegalArgumentException("TipoMovimiento inválido: " + value);
+        }
+    }
 }
