# clientes-cuentas-microservicio-infrastructure/src/main/java/org/javierGomez18/clientes/cuentas/microservicio/infrastructure/mapper/MovimientoEntityMapper.java
@@ -2,6 +2,7 @@ package org.javierGomez18.clientes.cuentas.microservicio.infrastructure.mapper;
 
 import org.javierGomez18.clientes.cuentas.microservicio.domain.model.Movimiento;
 import org.javierGomez18.clientes.cuentas.microservicio.domain.model.TipoMovimiento;
+import org.javierGomez18.clientes.cuentas.microservicio.infrastructure.persistence.entity.CuentaBancariaEntity;
 import org.javierGomez18.clientes.cuentas.microservicio.infrastructure.persistence.entity.MovimientoEntity;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -19,6 +20,7 @@ public interface MovimientoEntityMapper {
     Movimiento toDomain(MovimientoEntity entity);
 
     @Mapping(source="fechaOperacion",target="createAt")
+    @Mapping(source = "cuentaId", target = "cuenta")
     MovimientoEntity toEntity(Movimiento domain);
     
     List<Movimiento> toDomainList(List<MovimientoEntity> entities);
@@ -26,6 +28,13 @@ public interface MovimientoEntityMapper {
 
     default TipoMovimiento map(String value) {
         return value == null ? null : TipoMovimiento.valueOf(value);
+    }
+
+    default CuentaBancariaEntity map(Long idCuenta) {
+        if (idCuenta == null) return null;
+        CuentaBancariaEntity c = new CuentaBancariaEntity();
+        c.setId(idCuenta);
+        return c;
     }
 }
 
