# clientes-cuentas-microservicio-infrastructure/src/main/java/org/javierGomez18/clientes/cuentas/microservicio/infrastructure/rest/controller/CuentasbancariasController.java
@@ -1,9 +1,7 @@
 package org.javierGomez18.clientes.cuentas.microservicio.infrastructure.rest.controller;
 
-import org.javierGomez18.clientes.cuentas.microservicio.domain.port.in.CreateCuentaUseCase;
-import org.javierGomez18.clientes.cuentas.microservicio.domain.port.in.FindCuentaUseCase;
-import org.javierGomez18.clientes.cuentas.microservicio.domain.port.in.FindMovimientoUseCase;
-import org.javierGomez18.clientes.cuentas.microservicio.domain.port.in.UpdateCuentaUseCase;
+import org.javierGomez18.clientes.cuentas.microservicio.domain.model.Movimiento;
+import org.javierGomez18.clientes.cuentas.microservicio.domain.port.in.*;
 import org.javierGomez18.clientes.cuentas.microservicio.infrastructure.mapper.CuentaResponseMapper;
 import org.javierGomez18.clientes.cuentas.microservicio.infrastructure.mapper.MovimientoResponseMapper;
 import lombok.RequiredArgsConstructor;
@@ -11,6 +9,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.javierGomez18.clientes.cuentas.microservicio.web.api.CuentasApi;
 import org.javierGomez18.clientes.cuentas.microservicio.web.dto.CuentaRQ;
 import org.javierGomez18.clientes.cuentas.microservicio.web.dto.CuentaUpdateRQ;
+import org.javierGomez18.clientes.cuentas.microservicio.web.dto.MovimientoRQ;
+import org.javierGomez18.clientes.cuentas.microservicio.web.dto.MovimientoRS;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -18,19 +18,17 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Map;
 
-/**
- * Controlador REST: Cuentas Bancarias
- * ⚡ Depende SOLO de puertos IN (casos de uso)
- */
 @Slf4j
 @RestController
 @RequiredArgsConstructor
 public class CuentasBancariasController implements CuentasApi {
 
     private final CreateCuentaUseCase createCuentaUseCase;
+    private final CreateMovimientoUseCase createMovimientoUseCase;
     private final FindCuentaUseCase findCuentaUseCase;
     private final UpdateCuentaUseCase updateCuentaUseCase;
     private final CuentaResponseMapper cuentaResponseMapper;
+    private final MovimientoResponseMapper movimientoResponseMapper;
 
     @Override
     public ResponseEntity<Void> createCuenta(CuentaRQ cuentaRQ) {
@@ -55,6 +53,21 @@ public class CuentasBancariasController implements CuentasApi {
         updateCuentaUseCase.updateCuenta(command);
 
         return ResponseEntity.status(HttpStatus.OK).build();
+    }
+
+    @Override
+    public ResponseEntity<MovimientoRS> realizarMovimiento(Long idCuenta, MovimientoRQ movimientoRQ) {
+        log.info("POST /cuentas/{}/movimientos - Realizar movimiento de tipo {}"
+                ,idCuenta,movimientoRQ.getTipoMovimiento());
+        var command = new CreateMovimientoUseCase.CreateMovimientoCommand(
+                idCuenta,
+                movimientoRQ.getIdCuentaDestino(),
+                movimientoRQ.getTipoMovimiento().toString(),
+                movimientoRQ.getImporte(),
+                movimientoRQ.getDescripcion()
+        );
+        Movimiento movimiento = createMovimientoUseCase.createMovimiento(command);
+        return ResponseEntity.ok(movimientoResponseMapper.toResponse(movimiento));
     }
 }
 
